data/issues_nolabel/nolabel_test_93.txt
build failed!  File "/usr/lib/python2.7/encodings/__init__.py", line 123       raise CodecRegistryError,\

ubgpu@ubgpu:/github/tensorflow$ PYTHONPATH=/usr/lib/python2.7 bazel build -c opt --config=cuda //tensorflow/cc:tutorials_example_trainer
Fatal Python error: Py_Initialize: Unable to get the locale encoding
File "/usr/lib/python2.7/encodings/init.py", line 123
raise CodecRegistryError,
^
SyntaxError: invalid syntax
Aborted (core dumped)
ubgpu@ubgpu:/github/tensorflow$